themes/lost-theme/assets/css/main.css
/* ... */
nav, .nav {
	--nav-width: 0;
	display: flex;
	flex-flow: column;
	/*resize: horizontal;*/ /*flex: 33.3%;*/ /* TBD: Swap for not allowing horizontal resizing (finally, commented after adding border resize) */
	height: 100%; /*min-height: 100vh;*/
	width: 100%;
	min-width: var(--nav-w-min);
	max-width: var(--nav-w-max);
	overflow: hidden; /*overflow-y: auto;*/
	background-color: var(--gray-D2) !important;
	box-shadow: inset 8px 0px 4px -6px rgba(0, 0, 0, 0.33); /*box-shadow: 4px 0 6px rgba(0, 0, 0, 0.3);*/

	& #nav-footer {
		background-color: transparent;

		& span {
			margin: 0 auto; /* NOTE: Allows centering even 1 element with space-between */
			font-size: 0.5em; /* fallback for unsupported browsers ↴ */
			font-size: clamp(0.5em, 4.5cqw, 0.67em);
			color: color-mix(in srgb, var(--text) 67%, transparent);
			text-shadow: -1px 1px 2px rgba(0, 0, 0, 0.33);
		}
		& .copyright.short {
			display: none;
		}
		& .copyright.long {
			display: inline;
		}
	}
}

nav ul li {
	margin: 0 0 4px 0;
	/*padding: 2px 0 2px 0px;*/
	list-style-type: none;

	& summary {
		display: flex;
		align-items: center;
		min-height: 32px;
		border-radius: 2px;
		background-color: var(--gray-C3);
		box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.33);
		cursor: copy; /* Alternatives: help, context-menu */
		scroll-snap-align: start;
		scroll-margin: 0px;
		overflow: hidden;
		user-select: none; /* Avoids contents get selected sometimes at unfoldeing */
		transition: background-color var(--shorter) ease;

		&:hover, &:focus-within {
			background-color: var(--gray-B4);
		}
		&::after {
			content: '▾'; /*▾▿⇣*/
			display:flex;
			align-items: center;
			justify-content: center;
			height: 24px;
			min-width: 24px;
			margin-right: 1.75%; /*0.2em;*/
			padding-left: 1.5%; /*0.1em*/
			font-size: 1.25em;
			color: var(--gray-5A);
			border-left: 1px solid rgb(128, 128, 128, 0.25);
			transition: var(--shorter);
			/*
			height: 5px;
			width: 9px;
			background: url('/icons/fa-angle-down-solid.svg') no-repeat;
			background-size: cover;
			*/
		}
		/*
		&::marker {
			content: "▾";
		}
		*/
	}
	& details {
		container-type: inline-size; /* defines the element as a container */

		& p {
			margin: 2px 6px 6px 6px;
			text-align: justify;
			text-wrap: pretty;
			hyphens: auto;
			hyphenate-limit-chars: 6;
			font-size: smaller;
			font-size: clamp(0.75em, 4.5cqw, 0.85em);
			line-height: clamp(1.2em, 4.5cqw, 1.3em); /*1.35*/
		}
		&:focus-within {
			border-radius: 2px;
			outline: 2px solid var(--accent);
			outline-offset: 0;
		}
		&[open] > summary::after {
			color: var(--accent);
			cursor: default;
			transform: scaleY(-1); /*transform: rotate(180deg);*/
		}
	}
}

nav ul li details summary a {
	display: flex;
	flex-grow: 1;
	align-self: stretch; /* Prevents <details> from interfering at the top & bottom! */
	padding: 2px 0px;
	align-items: center;
	color: var(--text);
	text-decoration: none;
	font-weight: 600;
	font-size: small;
	outline-offset: -2px;
	overflow: hidden;
	mask-image: linear-gradient(to left, transparent, black 0.5em); -webkit-mask-image: linear-gradient(to left, transparent, black 0.5em);

	& picture {
		width: 2em;
		margin-right: 0.25em;
		filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.33));

		& img {
			width: inherit;
			max-height: 2em;
			vertical-align: middle;
		}
	}
	& > span {
		display: inline-block; /* One can only apply ellipsis to a block kind of element! */
		flex-grow: 1; /*width: fit-content;*/
		min-width: 10ch; /*min-width: 50%;*/
		padding-right: 0.15em;
		overflow: hidden;
		font-size: clamp(0.75em, 6cqw, 1em);
		white-space: nowrap;
		text-overflow: ellipsis;
	}
	&:link {
		text-decoration: none; 
	}
	&:visited {
		color: inherit; /*color: color-mix(in srgb, var(--gray-5A) 33%, transparent);*/ /*#ee80ff*/
	}
	&:hover, &:focus-within {
		color: var(--gray-0F);
		font-weight: bold;
		text-shadow: -1px 1px 2px rgba(0, 0, 0, 0.33);
	}
	&:active {
		color: inherit;
		margin: -1px 0; /* Avoids translation bellow exposes details area at top! */
		transform: translateX(1px) translateY(1px);
	}
	&:focus-visible {
		outline: 0px solid var(--accent);
	}
	/*
	&::after {
		content: '';
		height: 67%;
		border: 1px solid rgb(128, 128, 128, 0.67);
		pointer-events: none;
		touch-action: none;
	}*/
}

.resizer {
	height: 100%;
	width: 0;
	flex-shrink: 0;
	position: relative;
	cursor: col-resize;
	user-select: none;
	touch-action: none;
	z-index: 2;

	&::before {
		content: "";
		position: absolute;
		top: 50%;
		left: 50%;
		height: 18px;
		width: 6px;
		transform-origin: 50%;
		transform: translate(-50%, -50%);
		opacity: 0.67;
		border-inline: 2px solid var(--text);
		filter: drop-shadow(0px 0px 3px var(--text-inv));
	}
	&:hover::before {
		height: 20px;
		width: 8px;
		border-inline-width: 3px;
		filter: drop-shadow(1px 2px 2px rgba(0, 0, 0, 0.66));
	}
	&:active::before {
		opacity: 1;
		border-inline-color: var(--accent);
	}
}

.flags {
	display: flex;
	gap: 3px;
	margin-left: auto;
	justify-content: flex-end;
	margin-right: 0.5em;

	& span {
		padding: 0.15em 0.3em;
		border-radius: 0.15em;
		color: var(--text);
		font-size: smaller;
		font-weight: bold;
		font-family: 'Consolas', 'Menlo', 'Lucida Console', 'Monaco', Courier, 'Courier New', monospace;
		background-color: color-mix(in srgb, var(--accent) 50%, transparent);
	}
	& .new {
		/*background-color: #00dd00;*/
	}
	& .updated {
		/*background-color: #dd9000;*/
	}
	& .wip {
		/*background-color: #dd9000;*/
	}
}

.shields {
	display: flex;
	flex-wrap: nowrap;
	justify-content: center; /*space-between*/
	gap: 1%;
	width: 100%;
	padding: 4px 8px 0px 4px;
	overflow: hidden;
	pointer-events: none;
}

.shields:hover > * {
	opacity: 0.5;
	filter: blur(1.5px);

	& img {
		min-height: 16px;
	}
}
.shields:hover > *:hover {
	opacity: 1;
	filter: blur(0px);
	z-index: 1;

	& img {
		width: auto;
		max-height: 16px;
	}
}
/* ... */

